<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hudl updates</string>
    <string name="label_checking_for_update">Checking for updates…</string>
    <string name="label_downloading_update">Update downloading…</string>
    <string name="label_hudl_system_update">Update available</string>
    <string name="label_restart_and_install">Restart</string>
    <string name="label_download">Download</string>
    <string name="label_skip_download">Not now</string>
    <string name="label_almost_ready">Your Hudl is almost ready to go</string>
    <string name="new_update_coming">There\'s a new update waiting for your Hudl, containing the following:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="try_again">Try again</string>
    <string name="continue_text">Continue</string>
    <string name="cancel_text">Cancel</string>
    <string name="close_text">Close</string>
    <string name="update_not_mandatory">This update is optional.</string>
    <string name="label_skip">Not now</string>
    <string name="label_retry">Try again</string>
    <string name="error_json_file">There was a problem checking for updates. Please check your internet connection and try again.</string>
    <string name="error_server_busy">A lot of people are updating their Hudls at the moment. Please wait a few minutes and then try again.</string>
    <string name="error_verification_title">Couldn\'t verify update</string>
    <string name="error_checksum">There was a problem verifying your update. Please try downloading the update again.</string>
    <string name="error_signature">There was a problem verifying your update. Please try downloading the update again.</string>
    <string name="memory_message_insufficient">There\'s not enough space on your Hudl to install this update.</string>
    <string name="title_battery_insufficient">Battery level too low</string>
    <string name="label_description">Update available</string>
    <string name="title_tc_webview">Hudl legal</string>

    <!-- Error Download Messages -->

    <string name="label_download_stop">Unable to download</string>
    <string name="label_text_download_stop">There was a problem downloading your update. Please check your internet connection and try again.</string>
    <string name="label_download_pause">Download paused</string>
    <string name="label_text_download_pause">Your download was paused. Please check your internet connection and try again.</string>
    <string name="label_download_error_resume">Unable to download</string>
    <string name="label_text_download_error_resume">There was a problem resuming your download. Please try again later.</string>
    <string name="label_download_unknown">Unable to download</string>
    <string name="label_text_download_unknown">There was a problem downloading your update. Please check your internet connection and try again.</string>
    <string name="label_download_file_exist">Problem with update</string>
    <string name="label_text_download_file_exist">This file already exists. Please remove the saved one and try again.</string>
    <string name="label_download_no_space">Problem with update</string>
    <string name="label_text_download_no_space">There\'s not enough space on your Hudl to install this update. Please free up some space and try again.</string>
    <string name="label_download_404">Problem with update</string>
    <string name="label_text_download_404">A resource is missing. Please try again later.</string>
    <string name="label_download_no_found">Problem with update</string>
    <string name="label_text_download_no_found">There\'s a problem with your Hudl\'s memory. Please try again later.</string>

    <!-- Check Status update -->
    <string name="label_last_time_check_today">Last checked at </string>
    <string name="label_last_time_check">Last update on </string>
    
    <string name="label_last_time_updated">Last updated on </string>
    <string name="label_last_time_update_today">Last updated at </string>
    
    
    <string name="label_current_version">Your current version is </string>
    <string name="label_check_title">Checking for updates...</string>
    <string name="label_check_update_title">Check for updates</string>
    <string name="label_check_title_updated">Your Hudl is up to date</string>
    <string name="label_check_title_server_busy">Updater is busy</string>
    <string name="label_check_title_network_error">Couldn\'t check for updates</string>
    <string name="label_check_now">Check now</string>

    <!-- Notification Running -->
    <string name="label_notification_download_running_title">Downloading Hudl update</string>
    <string name="label_notification_download_starting">Starting Hudl update</string>
    <string name="toast_notification_only_owner">A system software update is available, but only the owner can install it.</string>

    <!-- Downloading update -->
    <string name="ota_notification_title">Hudl update</string>
    <string name="ota_notification_description">Downloading update&#8320;</string>
    <string name="hudl_update_title">Hudl update</string>
    <string name="hudl_update_new_available">A new Hudl update is available</string>
    <string name="hudl_update_download_complete">Your Hudl update has finished downloading</string>
    <string name="cancel_update">Cancel update</string>

    <!-- Verifying download -->
    <string name="checking_authenticity">Checking authenticity...</string>
    <string name="checking_integrity">Checking integrity...</string>
    <string name="move_file">Moving update&#8320;</string>
    <!-- MPV - TIP-1069 -->
    <string name="terms_cds_text">By continuing you agree to be governed by the Terms &amp; Conditions of this device.</string>
    <string name="terms_cds_text_html">By continuing you agree to be governed by the <A href="">Terms &amp; Conditions</A> of this device.</string>

    <!-- Battery check -->
    <string name="battery_current_level">Your battery level is currently </string>
    <string name="battery_low_message">To make sure the update goes smoothly, you must charge your Hudl\'s battery to at least 30&#37; before updating.</string>
    <string name="battery_message_insufficient">Your battery level is too low. It must be at leat 30% to update the device.\nPlease plug your device in to a charger. 
        									\nYour current battery level is </string>
    <string name="battery_message_not_cable">Your Hudl\'s battery must be at least 30&#37; full to run your update. Please charge your Hudl and try again.</string>
    <string name="battery_message_cable">Your Hudl\'s battery must be at least 30&#37; full to run your update. Please charge your Hudl and try again.</string>

    <!-- Update performed -->
    <string name="hudl_update_performed_title">Update successful</string>
    <string name="ota_notification_description_performed">Update complete</string>
    <string name="hudl_update_title_congrats">Your Hudl is up to date</string>
    <string name="hudl_update_performed">Your Hudl has updated successfully. </string>
    <string name="label_close">Close</string>

    <!-- Loss wifi -->
    <string name="hudl_title_wifi_loss">Problem connecting</string>
    <string name="hudl_description_wifi_loss">Your Hudl can\'t seem to connect just now. Check your Wi-Fi connection to make sure that you have access to the internet. </string>
    <string name="hudl_button_wifi">Check Wi-Fi</string>
    <!-- Restart hudl -->
    <string name="label_title_restart_hudl">Restart your Hudl</string>
    <string name="label_skip_restart">Not now</string>
    <string name="label_description_restart_hudl">You\'ll need to restart your Hudl before this update can be installed. Once you\'ve restarted, it should only take a few minutes before your Hudl is ready to go.</string>
    <string name="label_battery_level_restart_hudl" formatted="false">Your battery level is currently N%. To make sure the update goes smoothly, you must charge your Hudl’s battery to at least 30% before updating.</string>
    <string name="hudl_update_ready_to_install">Your update is ready to be installed.</string>

    <!-- Development strings - THIS strings MUST NOT NEED MODIFY -->
    <string name="intent_download_complete">com.tesco.ota.action.downloadcomplete</string>
    <string name="intent_download_click">com.tesco.ota.action.downloadclick</string>
    <string name="intent_download_retry">com.tesco.ota.action.downloadretry</string>

    <!-- Strings that I can not find -->


    <!-- <string name=" ">Finishing download...</string> -->
    <!-- <string name=" ">Couldn't move update</string> -->
    <!-- <string name=" ">There was a problem moving your update. Please download the update once more and try again.</string> -->

</resources>