<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_margin_bottom"
    android:paddingLeft="@dimen/activity_margin_left"
    android:paddingRight="@dimen/activity_margin_right"
    android:paddingTop="@dimen/activity_margin_top" >

    <include layout="@layout/header" />

    <TextView
        android:id="@+id/text_download"
        style="@style/tam__header_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="26.66dp"
        android:gravity="left"
        android:text="@string/label_almost_ready"
        android:textColor="@android:color/white"
        android:textIsSelectable="false" />
    
    <TextView
        android:id="@+id/text_battery"
        style="@style/tam__header_subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="26.66dp"
        android:gravity="left"
        android:text="@string/label_battery_level_restart_hudl"
        android:textColor="@color/YELLOW"
        android:textIsSelectable="false"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/container_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="right"
        android:orientation="vertical"
        android:visibility="visible" >

        <Button
            android:id="@+id/button_skip_restart"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:tag="button_4"
            android:text="@string/label_skip_restart" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_spacing"
            android:layout_weight="0" />
        <!--
             <Button
            android:id="@+id/button_cancel_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Cancel update" />
        -->

        <Button
            android:id="@+id/button_perform_update"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:tag="button_1"
            android:text="@string/label_restart_and_install" />
    </LinearLayout>

</LinearLayout>